# code-convert-helper

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEBASE_SOURCE.md  GOAL.md  HANDOFF.md  LICENSE  PLUGIN_API.md  PROJECT_OVERVIEW.md  README.md  pyproject.toml
docs/: ambiguity.rst  cli.rst  codegen.rst  conf.py  directives.rst  imports.rst  index.rst  ir.rst  ownership.rst  pipeline.rst  plugins.rst  preflight.rst  pyproject.toml  report.rst  typing_inference.rst
examples/: sample.py
output/: README.md  ambiguities.md  sample.rs
output/ir/: sample.pyrir.json
pyrite/: PLUGIN_API.md  README.md  pyproject.toml
pyrite/docs/: ambiguity.rst  cli.rst  codegen.rst  conf.py  index.rst  ir.rst  pipeline.rst  plugins.rst  preflight.rst  report.rst  typing_inference.rst
pyrite/examples/: sample.py
pyrite/src/pyrite/: __init__.py  cli.py  pipeline.py
pyrite/src/pyrite/ambiguity/: resolver.py
pyrite/src/pyrite/codegen/: rust_writer.py
pyrite/src/pyrite/ir/: builder.py  schema.py  storage.py
pyrite/src/pyrite/plugins/: crate_substitution.py  protocol.py
pyrite/src/pyrite/preflight/: checks.py
pyrite/src/pyrite/report/: split_check.py  summary.py
pyrite/src/pyrite/typing_inference/: infer.py
pyrite/tests/: conftest.py  test_codegen.py  test_infer.py  test_ir_builder.py  test_pipeline.py  test_plugins.py  test_preflight.py
src/: __init__.py  cli.py  config.py  logging_setup.py  pipeline.py
src/ambiguity/: resolver.py
src/codegen/: __init__.py  rust_writer.py
src/directives/: parser.py
src/imports/: resolver.py
src/ir/: builder.py  schema.py  storage.py
src/ownership/: resolver.py
src/plugins/: crate_substitution.py  docs_conversion.py  protocol.py
src/preflight/: checks.py
src/report/: ownership_log.py  summary.py
src/typing_inference/: infer.py  resolver.py
tests/: conftest.py  test_codegen.py  test_directives.py  test_imports.py  test_infer.py  test_ir_builder.py  test_logging_and_config.py  test_ownership.py  test_pipeline.py  test_plugins.py  test_preflight.py  test_resolver.py
verification/: README.md
verification/clippy_check/: Cargo.toml
verification/clippy_check/src/: main.rs
