[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py2rust"
version = "0.1.0"
description = "A Python-to-Rust conversion assistant that preserves comments and marks every judgment call it makes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "libcst>=1.1.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "furo>=2024.1.29",
]

[project.scripts]
py2rust = "py2rust.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
