[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py2rust"
version = "0.1.0"
description = "A Python-to-Rust conversion assistant that preserves comments and marks every judgment call it makes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "libcst>=1.1.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "furo>=2024.1.29",
]

[project.scripts]
py2rust = "cli:app"

# Package layout: everything under src/ installs as flat top-level
# modules (ir, codegen, typing_inference, ambiguity, plugins, preflight,
# report, cli, pipeline) -- there is no `py2rust` wrapper package. This
# matches every import already in the codebase (`from ir import builder`,
# `from codegen import rust_writer`, etc.) and in the test suite.
[tool.hatch.build.targets.wheel]
packages = [
    "src/ir",
    "src/typing_inference",
    "src/ambiguity",
    "src/codegen",
    "src/plugins",
    "src/preflight",
    "src/report",
]
[tool.hatch.build.targets.wheel.force-include]
# `include` alone silently drops loose top-level modules (only "packages"
# entries reliably survive) -- force-include with an explicit
# source -> destination mapping is what actually places these at the
# wheel's top level.
"src/__init__.py" = "__init__.py"
"src/cli.py" = "cli.py"
"src/pipeline.py" = "pipeline.py"

[tool.hatch.build.targets.wheel.sources]
# Strip the "src/" prefix so the packages/files listed above land at the
# top level of the installed distribution instead of under a `src.*`
# namespace.
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]